2.3 ()
  - Sorry, I found critical database specification mistake.
    I must fix pull_request and pull_request_message table.
    All your pull requests is removed. Please create Pull request again by the following command.
    
      old/fix_v2_pull_request data/gitprep.db
  
  - support markdown table
  
2.2.1 (2016-06-14)
  - fix _search page error bug.
2.2 (2016-06-04)
>>>>>>> master
  - add command line merging interface to pull request page
  - add createing patch feture to pull request page
2.1 (2016-05-31)
  - default login session time become 2 weeks and delete save check box.
  - Fix commits page author links.
  - add admin page link.
2.0 (2016-05-07)
  - drop Perl 5.8 support, now require Perl 5.10.1
  - use own temparaly directory when creating repositoy with readme file. Now not use /tmp.
  - add Mojolicious::Plugin::DBViewer to cpanfile
  - X-Forwarded-HTTPS header is DEPRECATED! use X-Forwarded-Proto header instead.
  - remove [basic]show_ignore_space_change_link option.
    and move this feature to project settings page.
  - remove [basic]encoding_suspects option
    and move this feature to project settings page.
  - setup.sh is renamed to setup_module.
  - separete database creating logic to setup_database script.
  - add name and mail column to user table. mail is required for user registration.
  - add user update page.
  - fix bug that repository with read can't be created when git global user name and email.
  - drop cygwin support.
1.12 (7 Feb 2016)
  - Catch up latest Github design.
  - Fix bug that relative image path in README.md and blob html.
1.11 (7 Nov 2015)
  - support relative path in README.md and blob html.
  - support git version 2
1.10 (27 Jun 2015)
  - add show_ignore_space_change_link option to show --ignore-space-change page easily
  - add --ignore-space-change feature in diff page by using w= query string
    for example, http://some.com/kimoto/gitprep_t/commit/3cf14ade5e28ee0cd83b9a3b1e1c332aed66df53?w=